added case study to website

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,6 +15,7 @@
 	    <li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li>
 	    <!--- <li><a href="{{ site.url }}{{ site.baseurl }}/question">Research question</a></li> --->
 	    <li><a href="{{ site.url }}{{ site.baseurl }}/protocol">Methods</a></li>
+	    <li><a href="{{ site.url }}{{ site.baseurl }}/case-study">Case Study</a></li>
 	    <li><a href="{{ site.url }}{{ site.baseurl }}/team">Team</a></li>
 	    <li><a href="{{ site.url }}{{ site.baseurl }}/download-links">Downloads</a></li>
 	    <!--- <li><a href="https://forms.gle/y8qY86EZPmfjkzD78">Join us</a></li> --->
